--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Floreria Anny</title>
+
+    <!--DATOS DEL PROYECTO-->
+    <!--Nombre del Alumno: Carmen Milagros Gomez Rivera - 00000215496.
+        Correo: carmen.gomez215496@potros.itson.edu.mx
+        Titulo del proyecto: "Floreria Anny".
+        Materia: Diseno Web - MaJu de 7am a 9am y Vi de 8am a 9am.
+    -->
+
     <!--Tipografia-->
     <link href="https://fonts.googleapis.com/css2?family=Patua+One&family=Righteous&family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
