Proyecto Final 7:44pm

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
     <!--My Style-->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="index.css">
     
   </head>
   <body>
@@ -34,7 +34,7 @@
     <header class="cabecera py-lg-3">
       <nav class="navbar navbar-expand-xl navbar-light">
         <div class="container">
-          <a class="navbar-brand logo" href="#"><img src="/img/LogoFA.jpeg" alt=""></a>
+          <a class="navbar-brand logo" href="#"><img src="LogoFA.jpeg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
             <i class="bi bi-list"></i>
           </button>
@@ -70,7 +70,7 @@
     <!--Cuerpo de la pagina-->
     <main>
       <section>
-        <img class="navbar-brand inicio" src="/img/Flores.jpg" alt="">
+        <img class="navbar-brand inicio" src="Flores.jpg" alt="">
       </section>
 
       <!--Primera seccion de la pagina-->
@@ -87,7 +87,7 @@
               <div class="container">
                 <div class="row">
                   <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                    <img class="m-1" width="250" height="320" src="/img/Arreglo 1.jpg" alt="">
+                    <img class="m-1" width="250" height="320" src="Arreglo 1.jpg" alt="">
                     <h4>Cutton Candy</h4>
                     <h6>#1234</h6>
                     <h3>Decora con Elegancia: Jarrón de Cristal con Rosas Blancas y Margaritas. Dale un toque de frescura y sofisticación a tu hogar con este hermoso jarrón, que combina la belleza clásica de las rosas blancas con la alegría de las margaritas. </h3>
@@ -98,7 +98,7 @@
                     </div>
                   </div>
                   <div class="items col-sm-4 col-lg-4 mb-sm-4 ">
-                    <img width="250" height="320" src="/img/Arreglo 2.jpg" alt="">
+                    <img width="250" height="320" src="Arreglo 2.jpg" alt="">
                     <h4>Lovely</h4>
                     <h6>#2345</h6>
                     <h3>Este impresionante arreglo floral presenta una exuberante variedad de flores, incluyendo lilis, rosas, margaritas y más, cuidadosamente dispuestas en una base dorada que añade un toque de lujo y sofisticación. </h3>
@@ -109,7 +109,7 @@
                     </div>
                   </div>
                   <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                    <img width="250" height="320" src="/img/Arreglo 3.jpg" alt="">
+                    <img width="250" height="320" src="Arreglo 3.jpg" alt="">
                     <h4>Sweet spring</h4>
                     <h6>#3456</h6>
                     <h3>Añade un toque de color y sofisticación a tu espacio con este exquisito jarrón. Con una mezcla de rosas en tonos vibrantes y claveles, este arreglo floral es perfecto para iluminar cualquier habitación. El listón verde añade un toque de frescura y elegancia, haciendo de este jarrón el regalo ideal para cualquier ocasión especial. </h3>
@@ -132,7 +132,7 @@
           <div class="item col-12">
             <div class="row">
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/E1.jpg" alt="">
+                <img width="250" height="320" src="E1.jpg" alt="">
                 <h4>XV años</h4>
                 <h3>Embellece tu fiesta de quince años con nuestros arreglos florales. Desde la decoración hasta el ramo de la quinceañera, cuidamos cada detalle. Nuestro equipo experto hará que tu celebración sea inolvidable.</h3>
                 <p><i class="bi bi-three-dots"></i> <i class="bi bi-flower3"></i> <i class="bi bi-three-dots"></i></p>
@@ -141,7 +141,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/E2.jpg" alt="">
+                <img width="250" height="320" src="E2.jpg" alt="">
                 <h4>Bodas</h4>
                 <h3>Transforma tu boda en un evento inolvidable con nuestros arreglos florales personalizados. Desde ramos de novia hasta decoraciones para la ceremonia y la recepción, cada detalle está diseñado para complementar tu estilo y crear un ambiente encantador.</h3>
                 <p><i class="bi bi-three-dots"></i> <i class="bi bi-flower3"></i> <i class="bi bi-three-dots"></i></p>
@@ -150,7 +150,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/E3.jpg" alt="">
+                <img width="250" height="320" src="E3.jpg" alt="">
                 <h4>Bautizos</h4>
                 <h3>Celebra el bautizo de tu ser querido con nuestros arreglos florales delicados y encantadores. Desde decoraciones para la iglesia hasta centros de mesa, cada detalle está diseñado para añadir un toque especial a este día tan importante.</h3>
                 <p><i class="bi bi-three-dots"></i> <i class="bi bi-flower3"></i> <i class="bi bi-three-dots"></i></p>
@@ -171,7 +171,7 @@
           <div class="item col-12">
             <div class="row">
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="350" src="/img/R1.jpg" alt="">
+                <img width="250" height="350" src="R1.jpg" alt="">
                 <h4>Aurora</h4>
                 <h6>#7891</h6>
                 <h3>Este exquisito ramo combina la suavidad de las rosas rosas con la exótica belleza de una orquídea magenta, creando un contraste encantador y sofisticado. Perfecto para expresar amor y admiración. </h3>
@@ -182,7 +182,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/R2.jpg" alt="">
+                <img width="250" height="320" src="R2.jpg" alt="">
                 <h4>Ariel</h4>
                 <h6>#8910</h6>
                 <h3>Este delicado ramo combina la dulzura de las rosas rosa pastel con el frescor del follaje de campanita y la sofisticación del dólar, entre otras flores acompañantes. La armonía de colores y texturas crea un arreglo floral único y encantador, perfecto para expresar ternura y cariño en cualquier ocasión. </h3>
@@ -193,7 +193,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/R3.jpg" alt="">
+                <img width="250" height="320" src="R3.jpg" alt="">
                 <h4>Sofia</h4>
                 <h6>#9101</h6>
                 <h3>Este impresionante ramo combina la pureza de las rosas blancas con la profundidad del violeta, complementadas por la exuberancia de las peonías y la sofisticación del dólar, entre otras flores seleccionadas. Perfecto para expresar admiración y buen gusto en cualquier ocasión especial. </h3>
@@ -216,7 +216,7 @@
           <div class="item col-12">
             <div class="row">
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="350" src="/img/Regalo 1.jpg" alt="">
+                <img width="250" height="350" src="Regalo 1.jpg" alt="">
                 <h4>Osos de Peluche</h4>
                 <h6>#1011</h6>
                 <h3>Este adorable oso de peluche es el compañero perfecto para regalar amor y ternura. Con su suave pelaje y su dulce expresión. </h3>
@@ -227,7 +227,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/Regalo 2.jpg" alt="">
+                <img width="250" height="320" src="Regalo 2.jpg" alt="">
                 <h4>Peluche tejido</h4>
                 <h6>#1112</h6>
                 <h3>Descubre la calidez y la ternura de nuestros peluches tejidos a mano. Cada uno de estos adorables compañeros está meticulosamente tejido con amor y cuidado, creando piezas únicas que dan vida a la imaginación. </h3>
@@ -238,7 +238,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/Regalo 3.jpg" alt="">
+                <img width="250" height="320" src="Regalo 3.jpg" alt="">
                 <h4>Velas Aromaticas</h4>
                 <h6>#1213</h6>
                 <h3>
@@ -262,7 +262,7 @@
           <div class="item col-12">
             <div class="row">
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="350" src="/img/G1.jpg" alt="">
+                <img width="250" height="350" src="G1.jpg" alt="">
                 <h4>Globos de Graduación</h4>
                 <h6>#1314</h6>
                 <h3>¡Celebra el éxito con nuestros globos de graduación! Diseñados especialmente para esta ocasión especial. Disponibles en una variedad de colores y diseños, son el complemento perfecto para honrar los logros de graduación de tus seres queridos.</h3>
@@ -273,7 +273,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/G2.jpg" alt="">
+                <img width="250" height="320" src="G2.jpg" alt="">
                 <h4>True Love</h4>
                 <h6>#1415</h6>
                 <h3>Expresa tu amor con nuestro hermoso ramo de globos en forma de corazón. Este impresionante arreglo es perfecto para sorprender a esa persona especial en cualquier ocasión romántica o simplemente para alegrar su día. </h3>
@@ -284,7 +284,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/G3.jpg" alt="">
+                <img width="250" height="320" src="G3.jpg" alt="">
                 <h4>Happy Birthday!</h4>
                 <h6>#1516</h6>
                 <h3>¡Decora tu evento con nuestros alegres globos de cumpleaños! Con una variedad de colores y diseños divertidos, nuestros globos son el complemento perfecto para cualquier celebración.</h3>
@@ -307,7 +307,7 @@
           <div class="item col-12">
             <div class="row">
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="350" src="/img/M1.jpg" alt="">
+                <img width="250" height="350" src="M1.jpg" alt="">
                 <h4>Jazmin</h4>
                 <h6>#1617</h6>
                 <h3>Este exquisito arreglo floral combina la intensidad de las rosas rosa fucsia con la delicadeza de las orquídeas blancas, creando una sinfonía de color y elegancia. </h3>
@@ -318,7 +318,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/M2.jpg" alt="">
+                <img width="250" height="320" src="M2.jpg" alt="">
                 <h4>Jane</h4>
                 <h6>#1819</h6>
                 <h3>Este cautivador arreglo floral combina una variedad de flores en tonos vibrantes de naranja, amarillo y azul, creando una explosión de color y alegría. </h3>
@@ -329,7 +329,7 @@
                 </div>
               </div>
               <div class="items col-sm-4 col-lg-4 mb-sm-4">
-                <img width="250" height="320" src="/img/M3.jpg" alt="">
+                <img width="250" height="320" src="M3.jpg" alt="">
                 <h4>Congratulation!</h4>
                 <h6>#1920</h6>
                 <h3>. Este hermoso arreglo es el regalo perfecto para celebrar la graduación de esa persona especial. Las rosas blancas simbolizan la pureza y la nueva etapa que comienza, mientras que las lilis violetas representan el éxito y la admiración. </h3>
